# swears

./: CMakeLists.txt  LICENSE.md  README.md  main.cpp
include/swears/: curses.hpp  helpers.hpp  input.hpp  ncurses.hpp  window.hpp
include/swears/widgets/: fillwidget.hpp  gridwidget.hpp  staticwidget.hpp  widget.hpp
src/: CMakeLists.txt  curses.cpp  input.cpp  window.cpp
src/widget/: fillwidget.cpp  gridwidget.cpp  staticwidget.cpp  widget.cpp
